added about the BEM

--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
     </html>
 
 <!--
+    6.1
     mac shortcut in VS code
     duplicate line: Option + Shift + downarrow
 
     Column이라는 이름은 too generic so 클래스 이름을 저렇게 지정.
+
+    6.2
+    BEM: Block, Element, Modifier
+    https://css-tricks.com/bem-101/ 여기를 참고할 것.
+    실전에서는 class랑 id 어떤 걸 썼는지 헷갈려서 웬만하면 모두 class로 통일
+
 -->
