--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Welcome to Kokoa Clone</title>
     </head>
     <body>
-        <div id="status-bar">
+        <div class="status-bar">
             <div class="status-bar__column">
                 <span>No Service</span>
                 <i class="fa-solid fa-wifi"></i>
@@ -24,6 +25,21 @@
                 <!--To Do: Lightning Icon-->
             </div>
         </div>
+
+        <header class="welcome-header">
+            <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+            <p class="welcome-header__text">If you have a Kokoa Account, log in with your email or phone number.</p>
+        </header>
+
+        <form id="login-form">
+            <input type="text" placeholder="Email or phone number"/>
+            <input type="password" placeholder="Password"/>
+            <input type="submit" value="Log in"/>
+            <a href="#">Find KoKoa Account or Password</a>
+        </form>
+
+
+        
         <script 
         src="https://kit.fontawesome.com/7e9ed8cd58.js" 
         crossorigin="anonymous">
@@ -50,5 +66,9 @@
     svg; math, 좌표로 되어있는 태그
     
     script tag는 항상! body 닫기 전 마지막에 있어야 한다.
+
+    6.4
+    마우스로 option key를 누른채 찍으면 한번에 여러 줄 입력가능.
+    링크는 많이 만들 것이기 때문에 id를 설정하지 않고 form에 같이 넣는다.
 
 -->
