--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
+        <link rel="stylesheet" href="css/styles.css">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +20,7 @@
             </div>
             <div class="status-bar__column">
                 <span>110%</span>
-                <i class="fa-solid fa-battery-full"></i>
+                <i class="fa-solid fa-battery-full fa-lg"></i>
                 <i class="fa-solid fa-bolt"></i>
                 <!--To Do: Battery Icon-->
                 <!--To Do: Lightning Icon-->
@@ -71,4 +72,9 @@
     마우스로 option key를 누른채 찍으면 한번에 여러 줄 입력가능.
     링크는 많이 만들 것이기 때문에 id를 설정하지 않고 form에 같이 넣는다.
 
+    6.5
+    본격적으로 CSS 파일을 추가해본다.
+    폰트는 https://fonts.google.com/ 이곳을 참고
+    원하는 폰트를 고르면 css import ㄱul이랑
+    body에 적용할 폰트 형식을 준다. 하지만 너무 많은 폰트를 선택하지 말고 될 수 있으면 쓸 것만 고르자. Otherwise, the program can be too heavy.
 -->
