--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
             <div class="status-bar__column">
                 <span>No Service</span>
                 <i class="fa-solid fa-wifi"></i>
-                  
-                <!--To Do: Wifi Icon-->
             </div>
             <div class="status-bar__column">
                 <span>18:43</span>
@@ -22,8 +20,6 @@
                 <span>110%</span>
                 <i class="fa-solid fa-battery-full fa-lg"></i>
                 <i class="fa-solid fa-bolt"></i>
-                <!--To Do: Battery Icon-->
-                <!--To Do: Lightning Icon-->
             </div>
         </div>
 
@@ -39,8 +35,6 @@
             <a href="#">Find KoKoa Account or Password</a>
         </form>
 
-
-        
         <script 
         src="https://kit.fontawesome.com/7e9ed8cd58.js" 
         crossorigin="anonymous">
@@ -77,4 +71,8 @@
     폰트는 https://fonts.google.com/ 이곳을 참고
     원하는 폰트를 고르면 css import ㄱul이랑
     body에 적용할 폰트 형식을 준다. 하지만 너무 많은 폰트를 선택하지 말고 될 수 있으면 쓸 것만 고르자. Otherwise, the program can be too heavy.
+
+    6.6
+    HTML은 자동으로 margin을 잡는데 
+    Reset css는 대부분의 태그에 margin, padding, border을 0으로 만들어 준다.
 -->
